--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Tthis the first Github repo README file created on UBUNTU OS. YEAH!!
+This the first Github repo README file created on UBUNTU OS. YEAH!!
 
 
